<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Village Broadcast</string>
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_check_location_settings">CHECK LOCATION SETTINGS</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>

    <string name="alert_ok">OK</string>
    <string name="alert_phone_message">Your device is mobile phone. You can\'t execute this application !!</string>
    <string name="alert_media_message">Failed media library initialization.</string>

    <string name="empty_value">Data is empty !!</string>
    <string name="parse_error">Data parse error !! Check it.</string>
    <string name="alert_settings_message">Your settings is not completed. Check settings !!</string>

    <string name="alert_network_title">Wi-Fi Settings</string>
    <string name="alert_wifi_enable_title">Wi-Fi enable</string>
    <string name="alert_wifi_enable_message">Wi-Fi devices are off. You need to activate the device access to the service.</string>
    <string name="alert_network_message">Please Check your internet connection and try Again.\n(Contact to your administrator if you need assistance..)</string>
    <string name="alert_server_info_message">Server information is incorrect.</string>
    <string name="alert_network_btn_check_wifi">Check Wi-Fi</string>
    <string name="alert_wrong_page_url">Invalid web page url. Plese check your administrator.</string>
    <string name="alert_action_usage_access_settings">Please enable usage access.</string>
    <string name="alert_tts_message">TTS Engine is not available. Check your TTS settings.</string>
    <string name="alert_tts_btn_settings">Settings</string>

    <!-- main top nav launcher -->
    <string name="btn_iot_data_sync">IoT Data Sync</string>
    <string name="toast_iot_data_sync">IoT Data Sync completed.</string>
    <string name="btn_outdoor">Out-Door</string>
    <string name="btn_show_map">Site Map</string>
    <string name="addr_show_map">/sitemap.rcc</string>
    <string name="btn_show_apps">Apps</string>
    <string name="alert_calendar_not_found">Can\'t find Calendar Application. Check your application settings?</string>
    <string name="outdoor_mode_on">외출모드가 활성화 되었습니다.</string>
    <string name="outdoor_mode_off">외출모드가 비활성화 되었습니다.</string>
    <string name="outdoor_mode_motion">This behavior has been detected in out mode.</string>
    <string name="outdoor_mode_door_open">The Door is opened in out mode.</string>
    <string name="indoor_mode_no_motion">The user\'s behavior is not detected for more than a day.</string>

    <!--main shortcut -->
    <string name="shortcut_btn_show_broadcast">Show Broadcast</string>
    <string name="shortcut_btn_call_emergency">Emergency Call</string>
    <!--<string name="shortcut_addr_show_broadcast">/web_test/broadcast_test.html</string>-->
    <string name="shortcut_addr_show_broadcast">/broadcasting/broadcasting/getBroadcastingList.rcc</string>
    <string name="shortcut_addr_call_emergency">/is/api/Service/RegistEmergencyCall</string>

    <!--sub shortcut -->
    <string name="shortcut_btn_radio">Internet Radio</string>
    <string name="shortcut_btn_participation">Participation</string>
    <string name="shortcut_btn_additional_function">Additional Function</string>
    <string name="shortcut_btn_official_address">Official Addressbook</string>
    <string name="shortcut_btn_smart_home">Smart Home</string>
    <string name="shortcut_btn_my_information">My Information</string>
    <string name="shortcut_addr_radio">/is/api/Service/GetRadioList</string>
    <string name="shortcut_addr_participation">/participation/residentvote/getResidentVoteList.rcc</string>
    <string name="shortcut_addr_additional_function">/addfunction/iotdata/getIotDataList.rcc</string>
    <string name="shortcut_addr_official_address">/addfunction/publicoffice/getPublicOfficeList.rcc</string>
    <string name="shortcut_addr_smart_home">/addfunction/smarthome/getSmartHomeList.rcc</string>
    <!--<string name="shortcut_addr_my_information">/iot_test.html</string>-->
    <string name="shortcut_addr_my_information">/myinfo/myinfo/getMyinfoDetail.rcc</string>

    <string name="weather_title">%1$s 현재날씨</string>
    <string name="celsius">%1$s°C</string>
    <string name="sky_status">%1$s | %2$s</string>
    <string name="weather_day">%1$02d(%2$s)</string>
    <string name="humidity">Humidity : %1$s</string>
    <string name="rainfall">1H Rainfall : %1$dmm</string>
    <string name="snowfall">1H Snowfall : %1$dmm</string>

    <!-- radio -->
    <string name="activity_radio_default_title">Internet Radio</string>
    <string name="emergency_call_success_message">Sending emergency call is succeeded.</string>
    <string name="emergency_call_fail_message">Sending emergency call is failed. Call direct or retry sending.</string>

    <string name="test_register_url_load">Load</string>
    <string name="title_activity_show_application">ShowApplicationActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_broadcast_webview">Village Broadcast</string>

    <string name="title_text_broadcast">Text Broadcast</string>
    <string name="title_audio_broadcast">Village broadcast is playing.</string>
    <string name="toast_tts_error">TTS play error...</string>

    <string name="server_connection_error">Can not connect to server. Check your service</string>
    <string name="empty_radio_channel_list">There is no available radio channels.</string>
    <string name="iot_devices_title">Additional IoT Devices</string>
    <string name="iot_devices_refresh">Refresh</string>
    <string name="iot_devices_send">Send</string>
    <string name="iot_devices_send_alert">Sync with Server?</string>
    <string name="iot_devices_empty">No devices founded.</string>
    <string name="iot_devices_desc">- If the desired device is not detected , press the [Refresh] button , or you hope to rediscover [Refresh] After proceed according to the instruction manual of the device.</string>

    <!-- use internal bluetooth -->
    <string name="alert_bluetooth_enable_message">Bluetooth is turned off. You must activate in order to use this feature.</string>

</resources>
