<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/bg_white_corner_radius"
          android:padding="15dp"
          android:orientation="vertical">

    <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@drawable/bg_white_corner_radius"
                  android:orientation="horizontal">
        <ImageView
            android:id="@+id/title_image"
            android:layout_width="@dimen/installed_apps_list_icon_size"
            android:layout_height="@dimen/installed_apps_list_icon_size"
            android:layout_margin="5dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_search"
            >
        </ImageView>

        <TextView
            android:layout_weight="1"
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:ellipsize="end"
            android:lines="1"
            android:gravity="left|center_vertical"
            android:layout_gravity="center"
            android:shadowColor="#FF464646"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:text="@string/iot_devices_title"
            android:textSize="@dimen/show_apps_title_font_size" >
        </TextView>
        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00000000"
            android:src="@android:drawable/ic_delete"
            >
        </ImageButton>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:paddingStart="@dimen/radio_view_horizontal_padding"
        android:paddingEnd="@dimen/radio_view_horizontal_padding"
        android:background="@color/iot_title_seperator" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="left|center_vertical"
        android:layout_gravity="center"
        android:shadowColor="#FF464646"
        android:shadowDx="1.0"
        android:shadowDy="1.0"
        android:shadowRadius="1.0"
        android:text="@string/iot_devices_desc"
        android:textSize="@dimen/show_apps_title_font_size" >
    </TextView>
    <FrameLayout
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:layout_gravity="bottom|right"
            android:src="@drawable/iot_grid_back"
            >
        </ImageView>
        <com.tonicartos.widget.stickygridheaders.StickyGridHeadersGridView
           android:id="@+id/iot_devices_grid"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center"
           android:paddingLeft="@dimen/radio_view_horizontal_padding"
           android:paddingRight="@dimen/radio_view_horizontal_padding"
           android:verticalSpacing="10dp"
           android:horizontalSpacing="@dimen/radio_grid_horizontal_cellspacing"
           android:listSelector="@android:color/transparent"
           android:stretchMode="columnWidth"
           android:numColumns="@integer/iot_grid_numcolumns"
          />
        <ViewStub
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout="@layout/grid_iot_devices_empty" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@android:drawable/btn_default_small"
            android:drawableLeft="@android:drawable/ic_menu_rotate"
            android:text="@string/iot_devices_refresh"
            >
        </Button>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginLeft="8dp"
            android:background="@android:drawable/btn_default"
            android:drawableLeft="@android:drawable/ic_menu_send"
            android:text="@string/iot_devices_send"
            >
        </Button>
    </LinearLayout>

</LinearLayout>
