<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context="com.nbplus.vbroadlauncher.fragment.LauncherFragment">

    <!-- top navigation layer -->
    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/launcher_top_nav_color"
        android:paddingLeft="@dimen/launcher_top_nav_padding_horizontal"
        android:paddingRight="@dimen/launcher_top_nav_padding_horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="@dimen/launcher_top_nav_height">
        <ImageView
            android:id="@+id/ic_nav_wifi"
            android:src="@drawable/ic_nav_wifi_off"
            android:paddingRight="@dimen/launcher_top_nav_padding_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/launcher_village_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/launcher_top_nav_title_font_size"
            android:textStyle="bold|normal"
            android:lines="1"
            android:ellipsize="end"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            />

        <LinearLayout android:id="@+id/ic_nav_outdoor"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      style="@android:style/Widget.Button"
                      android:clickable="true"
                      android:background="@drawable/ic_btn_nav_color"
                      >
        <ImageView
            android:src="@drawable/ic_nav_line"
            android:paddingRight="@dimen/launcher_top_nav_padding_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_outdoor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/btn_outdoor"
            android:textColor="@color/btn_color_absentia_off"
            android:textAllCaps="false"
            android:clickable="false"
            android:textSize="@dimen/launcher_top_nav_menu_font_size"
            android:background="@android:color/transparent"
            android:paddingRight="@dimen/launcher_top_nav_padding_horizontal"
            android:drawableLeft="@drawable/ic_nav_absentia_off"
            android:drawablePadding="@dimen/ic_nav_btn_drawable_padding"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/ic_nav_apps"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      style="@android:style/Widget.Button"
                      android:clickable="true"
                      android:background="@drawable/ic_btn_nav_color"
            >
        <ImageView
            android:src="@drawable/ic_nav_line"
            android:paddingRight="@dimen/launcher_top_nav_padding_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_show_apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/btn_show_apps"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:clickable="false"
            android:textSize="@dimen/launcher_top_nav_menu_font_size"
            android:background="@android:color/transparent"
            android:paddingRight="@dimen/launcher_top_nav_padding_horizontal"
            android:drawableLeft="@drawable/ic_nav_apps"
            android:drawablePadding="@dimen/ic_nav_btn_drawable_padding"/>

        </LinearLayout>

        <LinearLayout android:id="@+id/ic_nav_show_map"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      style="@android:style/Widget.Button"
                      android:clickable="true"
                      android:background="@drawable/ic_btn_nav_color"
            >
        <ImageView
            android:src="@drawable/ic_nav_line"
            android:paddingRight="@dimen/launcher_top_nav_padding_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_show_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/btn_show_map"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/launcher_top_nav_menu_font_size"
            android:clickable="false"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_nav_sitemap"
            android:drawablePadding="@dimen/ic_nav_btn_drawable_padding"/>
        </LinearLayout>
    </LinearLayout>

    <!-- launcher main layer -->
    <LinearLayout
        android:id="@+id/main_view_layout"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/launcher_main_view_margin_top"
        android:layout_marginBottom="@dimen/launcher_main_view_margin_bottom"
        android:layout_marginLeft="@dimen/launcher_main_view_margin_horizontal"
        android:layout_marginRight="@dimen/launcher_main_view_margin_horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <!-- left : clock, weather and calendar etc -->
        <LinearLayout
            android:id="@+id/main_view_left_panel"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.nbplus.vbroadlauncher.widget.TextClock
                android:id="@+id/text_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/launcher_clock_time"
                />

            <com.nbplus.vbroadlauncher.widget.WeatherView
                android:id="@+id/weather_view"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/clock_bottom_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/main_view_right_panel"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- right : service shortcuts... etc -->
            <android.support.v7.widget.GridLayout
                xmlns:grid="http://schemas.android.com/apk/res-auto"

                android:id="@+id/main_shortcut_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/launcher_ic_menu_main_shortcut_margin"
                android:layout_centerHorizontal="true"
                android:layout_gravity="right"
                grid:alignmentMode="alignBounds"
                grid:columnCount="2"
                grid:rowCount="1"
                grid:rowOrderPreserved="false"
                grid:useDefaultMargins="true">

            </android.support.v7.widget.GridLayout>
            <android.support.v7.widget.GridLayout
                xmlns:grid="http://schemas.android.com/apk/res-auto"
                android:id="@+id/shortcut_grid"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="right"
                grid:alignmentMode="alignBounds"
                grid:columnCount="3"
                grid:rowOrderPreserved="false"
                grid:useDefaultMargins="true">

            </android.support.v7.widget.GridLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
